--- a/.gitignore
+++ b/.gitignore
@@ -61,11 +61,6 @@ fabric.properties
 # Editor-based Rest Client
 .idea/httpRequests
 
-.gitignore
 .idea/
-archetypes/
-config.toml
-content/
-data/
-layouts/
-static/
+
+themes/**
