[sc-1702] Change base URL.

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://simulogics.github.io/airlinesim-docs/"
+baseURL = "https://handbook.airlinesim.aero/"
 languageCode = "en-us"
 title = "AirlineSim Handbook"
 theme = "relearn"
