--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2.4.13
         with:
-          hugo-version: '0.94.2'
-          # extended: true
+          hugo-version: '0.111.3'
+          extended: true
 
       - name: Build
         run: hugo --minify
