[sc-8380] Switch to our static host for deployment.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,22 +1,70 @@
 # All available Hugo versions are listed here: https://gitlab.com/pages/hugo/container_registry
-image: registry.gitlab.com/pages/hugo/hugo_extended:latest
+image: registry.gitlab.com/pages/hugo:0.140.2
+
+.docker_job:
+  variables:
+    DOCKER_HOST: tcp://docker:2376
+    # Specify to Docker where to create the certificates. Docker
+    #  creates them automatically on boot, and creates
+    # `/certs/client` to share between the service and job
+    # container, thanks to volume mount from config.toml
+    DOCKER_TLS_CERTDIR: "/certs"
+    # These are usually specified by the entrypoint, however the
+    # Kubernetes executor doesn't run entrypoints
+    # https://gitlab.com/gitlab-org/gitlab-runner/-/issues/4125
+    DOCKER_TLS_VERIFY: 1
+    DOCKER_CERT_PATH: "$DOCKER_TLS_CERTDIR/client"
+
+stages:
+  - test
+  - build
+  - deploy
+
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
 
-deploy_preview:
-  stage: deploy
-  before_script:
-  - apk add rsync openssh
-  - mkdir "${HOME}/.ssh"
-  - echo "${SSH_PRIVATE_KEY}" > "${HOME}/.ssh/id_rsa"
-  - chmod 700 "${HOME}/.ssh/id_rsa"
-  - echo "${SSH_HOST_KEY}" > "${HOME}/.ssh/known_hosts"
+test:
+  extends: .docker_job
+  stage: test
   script:
-  - hugo -b "https://handbook.preview.airlinesim.aero/" -D
-  - rsync -a --delete -e ssh public/ gitlab@handbook.preview.airlinesim.aero:/opt/gitlab/handbook.preview.airlinesim.aero/
-  artifacts:
-    paths:
-    - public
+    - hugo
   except:
     - master
     - staging
+
+pages:
+  extends: .docker_job
+  stage: deploy
+  script:
+    - hugo
+  artifacts:
+    paths:
+      - public
+  only:
+    - staging
+
+build:
+  extends: .docker_job
+  stage: build
+  variables:
+    HANDBOOK_DOMAIN: handbook.airlinesim.aero
+  script:
+    - hugo --baseURL "https://${HANDBOOK_DOMAIN}/"
+  artifacts:
+    paths:
+      - public
+    expire_in: 1 day
+  only:
+    - master
+
+deploy:
+  stage: deploy
+  variables:
+    HANDBOOK_DOMAIN: handbook.airlinesim.aero
+  script:
+    - rm -rf "/home/simulogics/websites/${HANDBOOK_DOMAIN}/*"
+    - cp -a public/* "/home/simulogics/websites/${HANDBOOK_DOMAIN}/"
+  tags:
+    - as_handbook_production_deployment
+  only:
+    - master
