--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 # All available Hugo versions are listed here: https://gitlab.com/pages/hugo/container_registry
-image: registry.gitlab.com/pages/hugo:0.140.2
+image: registry.gitlab.com/pages/hugo/hugo_extended:latest
 
 .docker_job:
   variables:
